Add Space Timetable Display Added Header to Timetable
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Display/timetable.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/timetable.html.twig
@@ -1,4 +1,9 @@
 {% trans_default_domain "BusybeeTimeTableBundle" %}
+<div class="row">
+    <div class="col-sm-12 text-center">
+        <h3>{{ manager.header|trans({'%name%': manager.idDesc}) }}</h3>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-sm-2 col-sm-offset-8">
