Generate TimeTable Display ONLY as AJAX Prep work for Period Search
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Display/selectDate.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/selectDate.html.twig
@@ -18,4 +18,10 @@
             }
         });
     }
+
+    $(document).ready(function () {
+        var displayDate = '{{ manager.timeTableDisplayDate }}';
+
+        displayTimeTable(displayDate);
+    });
 </script>
