--- a/src/Busybee/HomeBundle/Resources/views/Default/flash.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/flash.html.twig
@@ -27,5 +27,5 @@
 {% endfor %}
 
 {% for flashMessage in app.session.flashbag.get('success') %}
-    {% include 'BusybeeHomeBundle:Default:flashSplit.html.twig' with {'theMessage': flashMessage, level: 'successg'} %}
+    {% include 'BusybeeHomeBundle:Default:flashSplit.html.twig' with {'theMessage': flashMessage, level: 'success'} %}
 {% endfor %}
