--- a/src/Busybee/HomeBundle/Resources/views/home.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/home.html.twig
@@ -12,8 +12,7 @@
     {% if app.user is defined and app.user is not empty and manager.isTimeTable(app.user) %}
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3" id="displayTimeTable">
-                <div>
-                </div>
+                <p class="alert alert-info text-center">Loading TimeTable</p>
             </div>
         </div>
     {% else %}
