Timeout and TimeTable Loader Image
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Default/scripts.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/scripts.html.twig
@@ -21,7 +21,12 @@
             sessionKeepAliveTimer: false,
             dialogTitle: '{{ 'idletimeout.title'|trans({}, 'BusybeeHomeBundle') }}',
             dialogText: '{{ 'idletimeout.dialogue'|trans({'%time%': get_setting('idleTimeout', 15) -  1}, 'BusybeeHomeBundle') }}',
-            redirectUrl: '{{ path('security_timeout') }}'
+            redirectUrl: '{{ path('security_timeout') }}',
+            customCallback: function () {
+                var close = '{{ app.request.get('closeWindow') }}';
+                if (close.length > 0)
+                    window.close();
+            }
         });
 
         var hide = '{{ hideSection(app.request.get('_route')) }}';
