TimeTable Display Loader Graphic Composer Update
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Display/index.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/index.html.twig
@@ -8,8 +8,8 @@
 
 {% block contentContainer %}
     <div id="displayTimeTable">
-        <p class="alert alert-default text-center">{{ 'timetable.loading'|trans({}, 'BusybeeTimeTableBundle') }} <img
-                    src="{{ asset('img/ajax-loader.gif') }}"></p>
+        <div id="timetableHeader">
+        </div>
     </div>
 {% endblock contentContainer %}
 
