--- a/src/Busybee/TimeTableBundle/Resources/views/Display/timetable.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/timetable.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain "BusybeeTimeTableBundle" %}
 <div class="row">
-    <div class="col-sm-12 text-center">
+    <div class="col-sm-12 text-center" id="timetableHeader">
         <h3>{{ manager.header|trans({'%name%': manager.idDesc}) }}</h3>
     </div>
 </div>
