--- a/src/Busybee/TimeTableBundle/Resources/views/Display/selectDate.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Display/selectDate.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain "BusybeeTimeTableBundle" %}
 <script type="text/javascript" language="JavaScript">
     $('#displayTimeTable').on('change', '#selectDate', function () {
         var displayDate = $('#selectDate').val();
@@ -10,7 +11,7 @@
         var path = '{{ path('timetable_refresh_display', {displayDate: '__displayDate__'}) }}';
         path = path.replace('__displayDate__', displayDate);
 
-        var htmlString = '{% include '@BusybeeTimeTable/Display/waitForLoad.html.twig' %}';
+        var htmlString = '<h3 class="text-center">{{ 'timetable.loading'|trans() }} <img height="25" src="{{ asset('img/ajax-loader.gif') }}" title="{{ 'timetable.loading'|trans() }}"></h3>';
 
         $('#timetableHeader').html(htmlString);
 
