Teaching Load daily and timetable messages fro staff
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/builder.html.twig
@@ -34,7 +34,7 @@
                             <div id="periodStatus{{ period.id }}" class="startHidden container-fluid"
                                  style="clear: both;">
                                 {% for activity in period.activities %}
-                                    <div class="row" id="periodActivity{{ activity.id }}">
+                                    <div class="row row-hover" id="periodActivity{{ activity.id }}">
                                         <div class="col-sm-4 small">
                                             {{ activity.fullName }}
                                         </div>
