--- a/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
@@ -103,14 +103,14 @@
                     <div class="row">
                         <div class="col-sm-4">
                             {% set toggle = 'data-toggle=toggle data-onstyle=success data-offstyle=danger data-height=25 data-size=small data-on="<span class=\'halflings halflings-thumbs-up\'></span>" data-off="<span class=\'halflings halflings-thumbs-down\'></span>"' %}
-                            {% if isStaff(person.0) and canDeleteStaff(person.0) %}
+                            {% if person.staff_id is not empty and canDeleteStaff(person.0) %}
                                 <input type="checkbox" id="staffToggle{{ person.id }}"
                                        title="{{ 'person.staff.toggle'|trans }}" class="staffToggle"
                                        checked {{ toggle|raw }} />
-                            {% elseif canBeStaff(person.0) and not isStaff(person.0) %}
+                            {% elseif person.staff_id is empty and canBeStaff(person.0) %}
                                 <input type="checkbox" id="staffToggle{{ person.id }}"
                                        title="{{ 'person.staff.toggle'|trans }}" class="staffToggle" {{ toggle|raw }} />
-                            {% elseif not isStaff(person.0) %}
+                            {% elseif person.staff_id is empty %}
                                 <input type="checkbox" id="staffToggle{{ person.id }}"
                                        title="{{ 'person.staff.toggle'|trans }}" class="staffToggle" {{ toggle|raw }}
                                        disabled/>
@@ -121,15 +121,15 @@
                             {% endif %}
                         </div>
                         <div class="col-sm-4">
-                            {% if isStudent(person.0) and canDeleteStudent(person.0, get_parameter('person')) %}
+                            {% if person.stu_id is not empty and canDeleteStudent(person.0, get_parameter('person')) %}
                                 <input type="checkbox" id="studentToggle{{ person.id }}"
                                        title="{{ 'person.student.toggle'|trans }}" checked
                                        class="studentToggle" {{ toggle|raw }} />
-                            {% elseif canBeStudent(person.0) and not isStudent(person.0) %}
+                            {% elseif person.stu_id is empty and canBeStudent(person.0) %}
                                 <input type="checkbox" id="studentToggle{{ person.id }}"
                                        title="{{ 'person.student.toggle'|trans }}"
                                        class="studentToggle" {{ toggle|raw }} />
-                            {% elseif not isStudent(person.0) %}
+                            {% elseif person.stu_id is empty %}
                                 <input type="checkbox" id="studentToggle{{ person.id }}"
                                        title="{{ 'person.student.toggle'|trans }}"
                                        class="studentToggle" {{ toggle|raw }} disabled/>
@@ -140,14 +140,14 @@
                             {% endif %}
                         </div>
                         <div class="col-sm-4">
-                            {% if isUser(person.0) and canDeleteUser(person.0) %}
+                            {% if person.user_id is not empty and canDeleteUser(person.0) %}
                                 <input type="checkbox" id="userToggle{{ person.id }}"
                                        title="{{ 'person.user.toggle'|trans }}" checked
                                        class="userToggle" {{ toggle|raw }} />
-                            {% elseif canBeUser(person.0) and not isUser(person.0) %}
+                            {% elseif person.user_id is empty and canBeUser(person.0) %}
                                 <input type="checkbox" id="userToggle{{ person.id }}"
                                        title="{{ 'person.user.toggle'|trans }}" class="userToggle" {{ toggle|raw }} />
-                            {% elseif not isUser(person.0) %}
+                            {% elseif person.user_id is empty %}
                                 <input type="checkbox" id="userToggle{{ person.id }}"
                                        title="{{ 'person.user.toggle'|trans }}" class="userToggle" {{ toggle|raw }}
                                        disabled/>
