--- a/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
@@ -102,7 +102,7 @@
                         {% set additional = '' %}
                         {% if person.user_id == app.user.getId %}{% set additional = 'disabled' %}{% endif %}
                         {{ miscButton({'transDomain': 'BusybeeSecurityBundle', 'title': 'security.impersonate.title', windowOpen: {route: route }, class: 'btn btn-xs btn-warning glyphicons glyphicons-theater', type: 'button', style: 'margin: 1px 0 0 0', 'additional': additional})|raw }}
-                        {{ editButton({'title': 'user.request.passwordReset', 'class': 'btn btn-warning glyphicons glyphicons-user-key', 'transDomain': 'BusybeeSecurityBundle', 'windowOpen': {'route': path('security_user_reset_request', {id: person.user_id})}})|raw }}
+                        {{ editButton({style: 'margin: 1px 0 0 0;', title: 'user.request.passwordReset', 'class': 'btn btn-warning btn-xs glyphicons glyphicons-user-key', 'transDomain': 'BusybeeSecurityBundle', 'windowOpen': {target: 'PasswordRequest', params: 'width=1200,height=650', route: path('security_user_reset_request', {id: person.user_id})}})|raw }}
                     {% endif %}
                 </div>
                 <div class="col-md-3 hidden-sm hidden-xs">
