--- a/src/Busybee/SecurityBundle/Resources/views/User/passwordAlreadyRequested.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/passwordAlreadyRequested.html.twig
@@ -1,17 +1,12 @@
-{% extends "BusybeeSecurityBundle::layout.html.twig" %}
+{% extends "@BusybeeHome/Popup/template.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 {% block title %}{{ parent() }}{{ 'security.request.password.already'|trans }}{% endblock title %}
 
-{% block titleBlock %}
-    <div class="jumbotron hideSection">
-	<h1>{{ 'security.request.title'|trans }}</h1>
-</div>
-{% endblock titleBlock %}
-{% block SecurityBundleContent %}
+{% block contentContainer %}
 <div class="row marketing">
 	<div class="col-lg-12 alert alert-warning">
 		<p class="lead">{{ 'security.resetting.password_already_requested'|trans }}</p>
 	</div>
 </div>
-{% endblock SecurityBundleContent %}
+{% endblock contentContainer %}
