--- a/src/Busybee/SecurityBundle/Resources/views/User/request_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/request_content.html.twig
@@ -5,10 +5,10 @@
 {% set header = 'security.request.title' %}
 {% set transDomain = 'BusybeeSecurityBundle' %}
 {% set panelParagraph = 'security.help.request' %}
-{% set h3Content = saveButton({'class': 'btn btn-success halflings halflings-send'}) %}
-{% include 'BusybeeHomeBundle:Page:panelStart.html.twig' %}
+{% set h3Content = saveButton({'class': 'btn btn-success halflings halflings-send', title: 'email.send', transDomain: 'BusybeeHomeBundle'}) %}
 
 <form action="{{ path("busybee_security_user_reset_send_email") }}" method="post"  class="security_user_reset_request">
+    {% include 'BusybeeHomeBundle:Page:panelStart.html.twig' %}
 	<div id="form_body" class="container-fluid">
 		<div class="row">
 			<div class="col-sm-5 well">
@@ -29,6 +29,6 @@
 			</div>
 		</div>
 	</div>
+    {% include 'BusybeeHomeBundle:Page:panelEnd.html.twig' %}
 </form>
 
-{% include 'BusybeeHomeBundle:Page:panelEnd.html.twig' %}
