--- a/src/Busybee/HomeBundle/Resources/views/home.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/home.html.twig
@@ -12,8 +12,19 @@
     {% if app.user is defined and app.user is not empty and manager.isTimeTable(app.user) %}
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3" id="displayTimeTable">
-                <p class="alert alert-default text-center">{{ 'timetable.loading'|trans({}, 'BusybeeTimeTableBundle') }}
-                    <img src="{{ asset('img/ajax-loader.gif') }}"></p>
+                <div class="alert alert-default text-center">
+                    <h3 class="text-center">{{ 'timetable.loading'|trans({}, 'BusybeeTimeTableBundle') }}</h3>
+                    <div class="cs-loader">
+                        <div class="cs-loader-inner">
+                            <label class="glyphicons glyphicons-hourglass x05"></label>
+                            <label class="glyphicons glyphicons-hourglass x05"></label>
+                            <label class="glyphicons glyphicons-hourglass x05"></label>
+                            <label class="glyphicons glyphicons-hourglass x05"></label>
+                            <label class="glyphicons glyphicons-hourglass x05"></label>
+                            <label class="glyphicons glyphicons-hourglass x05"></label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     {% else %}
