--- a/web/css/main.css
+++ b/web/css/main.css
@@ -375,14 +375,12 @@ button.btn.btn-header {
 .tutorName {
     color: #775522;
 }
-
 .termBreak {
     background-color: rgba(128, 128, 0, 0.5);
     background-image: url(../img/termBreak.png);
     background-repeat: repeat;
     text-align: center;
 }
-
 .isClosed {
     background-color: lightsalmon;
     background-image: url(../img/isClosed.png);
@@ -390,7 +388,6 @@ button.btn.btn-header {
     font-weight: bold;
     text-align: center;
 }
-
 .isSpecial {
     background-color: cyan;
     background-image: url(../img/isSpecial.png);
@@ -402,4 +399,97 @@ button.btn.btn-header {
 .isNonSchoolDay {
     background-color: rgba(128, 128, 0, 0.2);
     text-align: center;
+}
+
+.cs-loader {
+    left: 0;
+    top: 0;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    margin-top: 15px;
+}
+
+.cs-loader-inner {
+    transform: translateY(-50%);
+    top: 50%;
+    position: absolute;
+    width: 100%;
+    color: darkolivegreen;
+    padding: 0 100px;
+    text-align: center;
+}
+
+.cs-loader-inner label {
+    font-size: 20px;
+    opacity: 0;
+    display: inline-block;
+}
+
+@keyframes lol {
+    0% {
+        opacity: 0;
+        transform: translateX(-300px);
+    }
+    33% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+    66% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+    100% {
+        opacity: 0;
+        transform: translateX(300px);
+    }
+}
+
+@-webkit-keyframes lol {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(-300px);
+    }
+    33% {
+        opacity: 1;
+        -webkit-transform: translateX(0px);
+    }
+    66% {
+        opacity: 1;
+        -webkit-transform: translateX(0px);
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: translateX(300px);
+    }
+}
+
+.cs-loader-inner label:nth-child(6) {
+    -webkit-animation: lol 3s infinite ease-in-out;
+    animation: lol 3s infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(5) {
+    -webkit-animation: lol 3s 100ms infinite ease-in-out;
+    animation: lol 3s 100ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(4) {
+    -webkit-animation: lol 3s 200ms infinite ease-in-out;
+    animation: lol 3s 200ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(3) {
+    -webkit-animation: lol 3s 300ms infinite ease-in-out;
+    animation: lol 3s 300ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(2) {
+    -webkit-animation: lol 3s 400ms infinite ease-in-out;
+    animation: lol 3s 400ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(1) {
+    -webkit-animation: lol 3s 500ms infinite ease-in-out;
+    animation: lol 3s 500ms infinite ease-in-out;
 }
